client/src/scss/main.scss
$font-stack: "Roboto", "Helvetica", "Arial", sans-serif;

$light-shade: #F4F5F6; // Used in manifest.coffee
$light-accent: #5FCBE6;
$main-brand: #585088; // Used in index.html
$dark-accent: #8E92E1;
$dark-shade: #1A1E49;

$primary: #575088;
$info: #5FCBE6;
$success: #4f9361;
$warn: #cd8229;
$danger: #f44336;

@mixin border-radius($radius) {
	-webkit-border-radius: $radius;
	-moz-border-radius: $radius;
	-ms-border-radius: $radius;
	border-radius: $radius;
}

@mixin margin-horizontal($margin) {
	margin-left: $margin;
	margin-right: $margin;
}
@mixin margin-vertical($margin) {
	margin-top: $margin;
	margin-bottom: $margin;
}

@mixin border-box() {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

@mixin transition-all($time) {
	-webkit-transition: all $time ease-out;
	-moz-transition: all $time ease-out;
	-o-transition: all $time ease-out;
	transition: all $time ease-out;
}

%invertable {
	color: $dark-shade;
	background-color: $light-shade;
	&.inverted {
		background-color: $dark-shade;
		color: $light-shade;
	}
}
%uninvertable {
	background-color: $dark-shade;
	color: $light-shade;
	&.inverted {
		color: $dark-shade;
		background-color: $light-shade;
	}
}

body {
	font: 100% $font-stack;
	@extend %invertable
}

h1, h2, h3, h4, h5, h6 {
	color: $main-brand;
}

button,
a.btn {
	@include border-radius(3px);
	color: $light-shade;
	@include transition-all(0.3s);
	border: none;
	cursor: pointer;
	padding: 10px;
	text-decoration: none;
	&.large {
		font-size: 1.2em;
		padding: 15px;
	}
	&.primary {
		background-color: $primary;
	}
	&.info {
		background-color: $info;
	}
	&.success {
		background-color: $success;
	}
	&.warn {
		background-color: $warn;
	}
	&.danger {
		background-color: $danger;
	}
	&:hover {
		opacity: 0.8;
	}
}

input {
	font-family: $font-stack;
	border: 0;
	border-bottom: 2px solid $dark-accent;
	padding: 5px;
	min-width: 45%;
	background: transparent;

	&::placeholder {
		color: $dark-accent;
	}
	&:focus {
		outline: none;
	}
}

.flex {
	display: flex;
	.box {
		display: block;
		flex-basis: 0;
		flex-grow: 1;
		flex-shrink: 1;
	}
	.grow {
		flex-grow: 1;
	}
	&.row {
		flex-direction: row;
	}
	&.column {
		flex-direction: column;
	}
	&.spaced {
		justify-content: space-between;
	}
	&.justify {
		justify-content: center;
	}
	&.end {
		justify-content: flex-end;
	}
	&.center {
		align-items: center;
	}
	&.wrap {
		flex-wrap: wrap;
	}
}

// ---- Card ----

.card {
	margin: 30px;
	padding: 30px;
	@include border-radius(8px);
	max-width: 300px;
	& > img,
	& > svg {
		margin: 0;
		max-width: 300px;
		@include border-radius(3px);
		transition: background-image 1s;
		box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2)
	}
	.content {
		@include border-box();
		max-width: 300px;
		padding: 10px;
	}
	@extend %uninvertable;
	&.highlight {
		background-color: $dark-accent;
	}
}

.video {
	margin: 10px;
	width: 100%;
	span {
		word-wrap: break-word;
		word-break: break-all;
	}
}

// ---- Viewing ----

.viewing {
	@extend .card;
	min-width: 80%;
	margin: 0 auto;
	img, svg {
		max-width: 100%;
	}
	.controls {
		margin-top: 30px;
		@extend .flex;
		@extend .row;
		@extend .justify;
		& > * {
			@include margin-horizontal(3px);
		}
	}
}

.slider-box {
	@extend .controls;
	@extend .grow;
	@extend .center;
	.rc-slider {
		@include margin-horizontal(10px);
	}
}

// ---- Helpers ---

.right {
	float: right;
}

.block {
	display: block;
}

.clickable {
	cursor: pointer;
}

.wide75 {
	min-width: 75%;
}
.width350 {
	width: 350px;
}
.marginup10 {
	margin-top: -10px;
}
.tiny-vertical-margin {
	@include margin-vertical(5px);
}
.spaced-children > * {
	@include margin-horizontal(2px);
}

